# $Id$

2006-06-25	Konstantin V. Arkhipov

	* core/Base/Creatable.class.php,
	core/Base/SingletonInstance.class.php: removed.

2006-06-25	Anton E. Lebedevich

	* main/Utils/TextUtils.class.php: getHostFromUrl() renamed to 
	getRootFromUrl().

2006-06-25	Konstantin V. Arkhipov

	* 0.4.7 released.

2006-06-24	Anton E. Lebedevich
	
	* main/Utils/TextUtils.class.php: getHostFromUrl(), getPathFromUrl(), 
	UrlSafeBase64Encode(), UrlSafeBase64Decode() added.

2006-06-22	Konstantin V. Arkhipov

	* main/DAOs/ObjectQuery.class.php: SQLArray support implemented.

2006-06-17	Konstantin V. Arkhipov

	* main/Flow/EditorController.class.php: uses makeForm() now.

	* meta/builders/ProtoClassBuilder.class.php: getForm() (single global
	Form object) deprecated in
	favor of makeForm() (Form's object factory) as suggested by sloory.

2006-06-11	Konstantin V. Arkhipov

	* main/DAOs/FileSystemDaoWorker.class.php,
	main/DAOs/SmartDaoWorker.class.php,
	main/DAOs/VoodooDaoWorker.class.php: transparent DAO-workers are now
	WatermarkedPeer-friendly.

2006-06-11	Konstantin V. Arkhipov

	* 0.4.6 released.

2006-06-08	Konstantin V. Arkhipov

	* meta/: two minor typo-caused bugs.

2006-05-29	Konstantin V. Arkhipov

	* meta/: spooked classes implemented, which is never generated and
	used only for referencing inside one meta-config.

2006-05-27	Konstantin V. Arkhipov

	* 0.4.5 released.

2006-05-25	Konstantin V. Arkhipov

	* meta/, core/DB/: default values for generic non-object types
	implemented.

	* meta/types/StringType.class.php,
	meta/classes/MetaClassProperty.class.php: correct column type guessing
	for meta's StringType.

	* meta/classes/MetaClassProperty.class.php,
	meta/builders/BaseBuilder.class.php: formatting issues with
	non-required generic types fixed, also fixed bug with illegal handling
	non-required generic object types in DAO' setters.

2006-05-24	Konstantin V. Arkhipov

	* meta/builders/DaoBuilder.class.php: handling of final classes
	implemented.
